gl31-master/src/test/deca/context/invalid/complet/cyclic_herit.deca
// Description:
//    Test invalide pour complet context
//
// Resultats:
//    Ligne 9: Erreur, héritage cyclique sur A
//
// Historique:
//    cree le 23/01/2021
class A extends A{}